[gd_scene load_steps=9 format=3 uid="uid://2kop3qnp3tqn"]

[ext_resource type="Script" path="res://Game.gd" id="1"]
[ext_resource type="PackedScene" path="res://Utilities/Transition.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Utilities/Menu.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://dwvasu576r76n" path="res://Graphics/Pictures/DarkArea2.png" id="5"]

[sub_resource type="Animation" id="1"]
resource_name = "Slide"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 20), Vector2(-512, 20), Vector2(-512, 20), Vector2(-1024, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dt7dm"]
_data = {
"Slide": SubResource("1")
}

[sub_resource type="Animation" id="2"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w080y"]
_data = {
"Fade": SubResource("2")
}

[node name="Game" type="Node2D" groups=["save"]]
process_mode = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
visible = false
offset_left = -5000.0
offset_top = -5000.0
offset_right = 4999.0
offset_bottom = 4999.0
color = Color(0, 0, 0, 1)

[node name="Background_music" type="AudioStreamPlayer" parent="."]

[node name="Effect_music" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dark" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(256, 192)
scale = Vector2(2, 2)
texture = ExtResource("5")

[node name="Transition" parent="CanvasLayer" instance=ExtResource("2")]

[node name="Menu" parent="CanvasLayer" instance=ExtResource("3")]
visible = false

[node name="ZoneMessage" type="Node2D" parent="CanvasLayer"]

[node name="Bar" type="ColorRect" parent="CanvasLayer/ZoneMessage"]
modulate = Color(1, 1, 1, 0)
offset_top = 20.0
offset_right = 1536.0
offset_bottom = 56.0
color = Color(0, 0, 0, 0.54902)

[node name="Label" type="Label" parent="CanvasLayer/ZoneMessage/Bar"]
layout_mode = 0
offset_left = 540.0
offset_top = 6.0
offset_right = 790.0
offset_bottom = 36.0
text = "Moki Town"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ZoneMessage"]
libraries = {
"": SubResource("AnimationLibrary_dt7dm")
}

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 512.0
offset_bottom = 384.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Fade"]
libraries = {
"": SubResource("AnimationLibrary_w080y")
}

[node name="Clock" type="Timer" parent="."]
wait_time = 60.0
